java-web-app-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: javawebappdeployment
spec:
 replicas: 2
 strategy:
    type: Recreate
 selector:
   matchLabels:
     app: javawebapp
 template:
  metadata:
   name: javawebapppod
   labels:
     app: javawebapp
  spec:
    containers:
    - name: javawebappcontainer
      image: ashokit/javawebapp
      imagePullPolicy: Always
      ports:
      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: javawebappsvc
spec:
  type: ClusterIP
  selector:
   app: javawebapp
  ports:
   - port: 80
     targetPort: 8080
...
