ingresspathbased.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  ingressClassName: nginx
  rules:
  - host: rjthapaa.org
      paths:
      - path: "/javawebapp"
        backend:
          service:
            name: javawebappsvc
            port:
              number: 80
      - pathType: Prefix
        path: "/mavenwebapp"
        backend:
          service:
            name: mavenwebappsvc
            port:
              number: 80
